# MobileNet-SSD-TensorRT

./: CMakeLists.txt  Makefile  README.md  common.cpp  common.h  imageBuffer.h  kernel.cu  main.cpp  main.cpp.autosave  mathFunctions.cu  mathFunctions.h  mobileNet.cbp  mobileNetSSDTensorRT  mobileNetSSDTensorRT.pro  pluginImplement.cpp  pluginImplement.h  tensorNet.cpp  tensorNet.h
model/: MobileNetSSD_deploy_iplugin.prototxt
util/: loadImage.cpp
util/cuda/: cudaOverlay.h  cudaRGB.cu  cudaRGB.h  cudaResize.cu
